WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188569
Crashes in Quip under _dictionaryPopupInfoForRange, in setObject:forKey:
https://bugs.webkit.org/show_bug.cgi?id=188569
Summary
Crashes in Quip under _dictionaryPopupInfoForRange, in setObject:forKey:
Tim Horton
Reported
2018-08-14 11:50:41 PDT
Crashes in Quip under _dictionaryPopupInfoForRange, in setObject:forKey:
Attachments
Patch
(3.99 KB, patch)
2018-08-14 11:51 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-08-14 11:51:21 PDT
Created
attachment 347097
[details]
Patch
Megan Gardner
Comment 2
2018-08-14 14:02:53 PDT
Comment on
attachment 347097
[details]
Patch Since this is speculative, I think a comment mentioning the radar might be helpful.
Tim Horton
Comment 3
2018-08-15 11:11:32 PDT
I'm going to refrain from adding a comment for two reasons: 1) it'll definitely fix the crash; there's no longer any way to get nil in the setObject:forKey:, and 2) we'll never revisit this, so the comment will live forever. The speculativeness is more about the "how we got here" than the fix.
Tim Horton
Comment 4
2018-08-15 11:11:40 PDT
Thank you for your review!
EWS
Comment 5
2018-08-15 11:12:24 PDT
Comment on
attachment 347097
[details]
Patch Rejecting
attachment 347097
[details]
from review queue.
megan_gardner@apple.com
does not have reviewer permissions according to
https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
Tim Horton
Comment 6
2018-08-15 11:19:10 PDT
<
rdar://problem/34201095
>
EWS
Comment 7
2018-08-15 11:19:51 PDT
Comment on
attachment 347097
[details]
Patch Rejecting
attachment 347097
[details]
from review queue.
megan_gardner@apple.com
does not have reviewer permissions according to
https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Commit Bot
Comment 8
2018-08-15 14:00:04 PDT
Comment on
attachment 347097
[details]
Patch Clearing flags on attachment: 347097 Committed
r234900
: <
https://trac.webkit.org/changeset/234900
>
WebKit Commit Bot
Comment 9
2018-08-15 14:00:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug