Crashes in Quip under _dictionaryPopupInfoForRange, in setObject:forKey: https://bugs.webkit.org/show_bug.cgi?id=188569 <rdar://problem/34201095>

Reviewed by Megan Gardner.

Source/WebKit:

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::dictionaryPopupInfoForRange):
Speculative fix; the crashes indicate font is null, but we just checked it,
so it must be getting made null by convertFont:toSize:. Check again!

Source/WebKitLegacy/mac:

* WebView/WebImmediateActionController.mm:
(+[WebImmediateActionController _dictionaryPopupInfoForRange:inFrame:withLookupOptions:indicatorOptions:transition:]):
Speculative fix; the crashes indicate font is null, but we just checked it,
so it must be getting made null by convertFont:toSize:. Check again!


Canonical link: https://commits.webkit.org/203693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234900 268f45cc-cd09-0410-ab3c-d52691b4dbfc